# PM-Accelerator

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
DataScience/: README.md  app.py  main.py
DataScience/notebooks/: Experiments.ipynb
DataScience/notebooks/models/: feature_importance.csv  isolation_forest.pkl  model_features.pkl  model_results.csv  xgb_model.pkl
DataScience/src/: exception.py  logger.py  utils.py
DataScience/src/components/: data_ingestion.py  data_preprocessing.py  data_transformation.py  model_trainer.py
