[project]
name = "pm-accelerator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.10",
    "dagshub>=0.7.0",
    "fastapi>=0.139.0",
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "matplotlib>=3.11.0",
    "mlflow>=1.27.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "setuptools>=82.0.1",
    "uvicorn>=0.49.0",
    "xgboost>=3.3.0",
]
