[project]
name = "pm-accelerator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.10",
    "dagshub>=0.7",
    "ipykernel>=7.3.0",
    "matplotlib>=3.10",
    "mlflow>=2.20",
    "nbformat>=5.10",
    "numpy>=2.2",
    "pandas>=2.2",
    "plotly>=6.0",
    "protobuf>=5",
    "scikit-learn>=1.6",
    "seaborn>=0.13.2",
    "shap>=0.48",
    "xgboost>=3.0",
]
